# base

./: .fortls  .gitconfig  .gitignore  .null-ls_794065_README.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CNAME  FORDsetup.md  LICENSE  LICENSE.gpl3.md  README.md  base.code-workspace  build.py  compile_commands.json  easifem.md  easifemBase_FORDsetup.md  easifemvar.sh  fortitude.toml  fortran.json  howToBuild.txt  install.py  neovim.json  package-lock.json  package.json  package.py  release_install.py  setup.py
.github/: .labeler.yml  .pr-labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  inspiration.md
.github/workflows/: labeler.yml  pr-labeler.yml
Workspaces/: BLAS.code-workspace  OpenMP.code-workspace  SparseMatrix.code-workspace  Tensor.code-workspace  Utility.code-workspace  refelem.code-workspace
cmake/: Compiler.cmake  Config.cmake.in  FindLAPACK.cmake  FindLAPACK_back_up.cmake  addARPACK.cmake  addFFTW.cmake  addGTKFortran.cmake  addGmsh.cmake  addHDF5.cmake  addLIS.cmake  addLapack95.cmake  addLua.cmake  addMetis.cmake  addOpenBLAS.cmake  addOpenMP.cmake  addPLPLOT.cmake  addRaylib.cmake  addSparsekit.cmake  addSuperLU.cmake  addToml.cmake  checkError.cmake  install.cmake  makeDirs.cmake  packaging.cmake  prefixPaths.cmake  print_target_properties.cmake  targetCompileDefs.cmake  targetCompileOpts.cmake  targetIncludeDirs.cmake  targetLinkLibs.cmake  targetProperties.cmake
cmake/Modules/: FindLAPACK.cmake
docs/: CNAME  aboutEASIFEM.md  index.html  index.md  search.html
docs/Base/: File.md  RealVector.md
docs/Classes/: Mesh.md
docs/Extpkgs/: String.md
docs/interface/: add.html  add_element.html  addcontribution.html  addcontribution_1.html  addcontributioninternally.html  addcontribution~2.html  addcontribution~3.html  aij_convert_dns.html  allocate_data.html  allocate_data~2.html  allocate_data~3.html  allocatedata.html  allocatedata~2.html  allocatedata~3.html  allocatedata~4.html  allocatedata~5.html  allocatedata~6.html  allocatemeshsize.html  amatvec.html  angle.html  angles.html  append.html  append_1.html  append_1~2.html  append_2.html  append_2~2.html  append_3.html  append_3~2.html  append_i1.html  append_i2.html  append_r1.html  append_r2.html  append~2.html  append~3.html  append~4.html  append~5.html  approxeq_abs_real.html  approxeq_rel_real.html  approxeq_ulp_real.html  approxge_real.html  (+2395 more)
docs/lists/: absint.html  files.html  modules.html  procedures.html  types.html
docs/module/: abstractarray_method.html  (+112 more)
figures/: banner.vectornator
pages/: AbstractArray.md  BLAS.md  BaseMethods.md  BaseType.md  BoundingBox.md  CSRMatrix.md  CSRSparsity.md  DOF.md  DeformationGradient_Class.md  ElemshapeData.md  Environment.md  Extpkgs.md  FEVariable.md  File.md  Install_Linux.md  Install_MacOSX.md  Install_Windows.md  Installation_Linux.md  Installation_MacOS.md  IntVector.md  IntVector_.md  LeftCauchyGreen.md  MshType.md  QuadraturePoint.md  Rank2Tensor.md  RealMatrix.md  RealVector.md  ReferenceElement.md  ReferenceHexahedron.md  ReferenceLine.md  ReferencePoint.md  ReferencePrism.md  ReferencePyramid.md  ReferenceQuadrangle.md  ReferenceTetrahedron.md  ReferenceTopology.md  ReferenceTriangle.md  RightCauchyGreen.md  SparseMatrix.md  Vector3D.md  (+2 more)
setup/: Darwin.sh  Ubuntu.sh  install_pkgs_Darwin.sh  install_pkgs_Ubuntu.sh  requirements.txt  set_envvar_Darwin.sh  set_envvar_Ubuntu.sh  setup_macOS.sh
src/: .fortls  Makefile  easifem-base.code-workspace
src/modules/AbstractArray/: CMakeLists.txt
src/modules/AbstractArray/src/: AbstractArray_Method.f90
src/modules/BLAS95/: CMakeLists.txt
src/modules/BLAS95/aux/: blas95.lst  test.F90  test.f90
src/modules/BLAS95/src/: EASIFEM_BLAS.F90  EASIFEM_BLAS.f90  EASIFEM_F77_BLAS.F90  F77_BLAS.F90  F95_BLAS.F90  cgbmv.f90  cgemv.f90  csrot.f90  ctpmv.f90  dgbmv.f90  dnrm2.f90  drotm.f90  dspr.f90  dsymm.f90  dtrsm_batch.f90  dtrsv.f90  easifem_blas_interface.inc  iface.inc  izamin.f90  sdot.f90  sger.f90  sroti.f90  sscal.f90  ssyr2.f90  ssyr2k.f90  stbsv.f90  stpsv.f90  strmm.f90  strsv.f90  zaxpy.f90  zher.f90  zher2.f90  zherk.f90  zhpr.f90  ztpmv.f90
src/modules/BLAS95/src/blas95_src/: caxpby.F90  caxpby.f90  caxpy.F90  caxpy.f90  caxpyi.F90  caxpyi.f90  ccopy.F90  cdotc.f90  cdotci.f90  cdotu.f90  cdotui.f90  cgbmv.F90  cgem2vc.F90  cgemm.F90  cgemm.f90  cgemm3m.F90  cgemm3m.f90  cgemm3m_batch.F90  cgemm3m_batch.f90  cgemm_batch.F90  cgemm_batch.f90  cgemmt.F90  cgemmt.f90  cgemv.F90  cgerc.F90  cgerc.f90  cgeru.F90  cgthr.F90  cgthrz.F90  cgthrz.f90  chbmv.F90  chemm.F90  chemm.f90  chemv.F90  cher.F90  cher.f90  cher2.F90  cher2.f90  cher2k.F90  cher2k.f90  (+264 more)
src/modules/H5Fortran/: CMakeLists.txt  Makefile  interface.f90  reader.f90  reader_lt.f90  writer.f90  writer_lt.f90
src/modules/H5Fortran/src/: read.f90  string_utils.f90  write.f90
src/modules/Sparsekit/: CMakeLists.txt  blassm.f  iters.f
src/modules/Sparsekit/src/: apl.f  ccn.f
src/modules/System/: CMakeLists.txt
src/modules/System/src/: System_Method.F90  System_Method.c  System_Method.f90
src/modules/Szaghi/: CMakeLists.txt
src/modules/Szaghi/BeFoR64/: README.md
src/modules/Szaghi/src/BeFoR64/: befor64.f90
src/modules/Szaghi/src/FACE/: face.f90
src/modules/Szaghi/src/StringiFor/: stringifor.f90  stringifor_string_t.f90
src/modules/TriangleInterface/: CMakeLists.txt
src/modules/TriangleInterface/src/: TriangleInterface.F90  report.c  triangle.c  triangle.h
tests/BLAS/: CMakeLists.txt  test_BLAS1V.f90
tests/CMake/ex-2/: CMakeLists.txt
tests/CMake/ex-3/: CMakeLists.txt
tests/CMake/ex-4/: CMakeLists.txt  main.f90  mod1.f90  mod2.f90
tests/CMake/ex-5/: CMakeLists.txt
tests/CMake/ex-5/cmake/: FindLAPACK.cmake
tests/Display/: CMakeLists.txt  test_Display.f90
tests/GlobalData/: CMakeLists.txt  test_GlobalData.f90
tests/VoigtRank2Vector/: CMakeLists.txt  test_VoigtRank2Tensor.f90
tests/testCSRMatrix/: CMakeLists.txt  ex-1.f90  example.ps  log.txt  make_bk  test_CSRMatrix.f90
tests/testCSRMatrix/someOldcode/: addcontribution.f90  crs.f90  csc-2.f90  linsolve.f90
(+5019 files in other folders)
