# This file is a part of easifem-base
# (c) 2021, all right reserved, Dr Vikas Sharma
#
# log
# 22/02/2021 this file was created
#-----------------------------------------------------------------------

CMAKE_MINIMUM_REQUIRED(VERSION 3.10.0 FATAL_ERROR)
SET(PROJECT_NAME "CSRMatrix")
PROJECT(${PROJECT_NAME})
ENABLE_LANGUAGE(Fortran)
SET(TARGET_NAME "test")
SET(LIB_NAME "easifemBase")

LIST(APPEND CMAKE_Fortran_FLAGS "-cpp")
ADD_EXECUTABLE(
  ${TARGET_NAME}
  test_${PROJECT_NAME}.f90 )

LIST(APPEND CMAKE_PREFIX_PATH "$ENV{EASIFEM_BASE}" "$ENV{EASIFEM_EXTPKGS}")
FIND_PACKAGE(${LIB_NAME})
LIST(APPEND LIBS "LAPACK95" "PENF" "BeFoR64" "FACE" "StringiFor" "FPL" "Sparsekit")
FOREACH(LIB ${LIBS})
  FIND_PACKAGE(${LIB})
ENDFOREACH()

# INTERFACE_LINK_LIBRARIES
IF(${LIB_NAME}_FOUND)
  GET_TARGET_PROPERTY(
    INCLUDEDIR
    ${LIB_NAME}::${LIB_NAME}
    INTERFACE_INCLUDE_DIRECTORIES)
  TARGET_INCLUDE_DIRECTORIES(
    ${TARGET_NAME}
    PRIVATE
    ${INCLUDEDIR} )
  TARGET_LINK_LIBRARIES(
    ${TARGET_NAME}
    PUBLIC
    ${LIB_NAME}::${LIB_NAME} )
  MESSAGE(STATUS "${LIB_NAME}::${LIB_NAME}")
ELSE()
  MESSAGE(ERROR " ${LIB_NAME} not found")
ENDIF()
