cmake_minimum_required(VERSION 3.14.0 FATAL_ERROR)
set(PROJECT_NAME "libeasifemBase")
project(${PROJECT_NAME})
enable_language(Fortran)
include(CMakePrintHelpers)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
# set(BLA_VENDOR LAPACK95)
find_package(LAPACK COMPONENTS OpenBLAS)
cmake_print_variables(LAPACK_LIBRARIES)
cmake_print_variables(LAPACK95_FOUND)